--- a/style.css
+++ b/style.css
@@ -44,3 +44,36 @@ body {
     color: #fff
 
 }
+
+.header {
+    padding: 20px 150px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333;
+    font-size: 1.9rem;
+    line-height: 1.3em;
+
+}
+
+
+.formulario {
+    padding: 0px 150px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333;
+    font-size: 1.3rem;
+    line-height: 1.3em;
+    justify-content: space-between;
+}
+
+.button{
+
+    padding: 5px 10px;
+    font-size: 1.0rem;
+    line-height: 1.1em;
+    margin-left: 10px;
+}
+
+.text_1{
+
+    font-size: 1.0rem;
+    line-height: 1.0em;
+}
