--- a/style.css
+++ b/style.css
@@ -54,16 +54,6 @@ body {
 
 }
 
-
-.formulario {
-    padding: 0px 150px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #333;
-    font-size: 1.3rem;
-    line-height: 1.3em;
-    justify-content: space-between;
-}
-
 .button{
 
     padding: 5px 10px;
@@ -77,3 +67,74 @@ body {
     font-size: 1.0rem;
     line-height: 1.0em;
 }
+
+h5{
+
+    margin: -10px;
+    padding: 5px 10px;
+
+}
+
+span.requerido {
+    font-size: 1.3em;
+    font-weight: bold;
+    color: #C00;
+  }
+  
+h2 {
+    font: normal 2em arial, sans-serif;
+    margin: 0;
+  }
+
+.formulario{
+    border: 1px solid #CED5D7;
+    border-radius: 6px;
+    padding: 45px 45px 20px;
+    margin-top: 50px;
+    background-color: white;
+    box-shadow: 0px 5px 10px #B5C1C5, 0 0 0 10px #EEF5F7 inset;
+    display: block;
+}
+
+.datos1 {
+    padding: 0px px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333;
+    font-size: 1.3rem;
+    line-height: 1.3em;
+    justify-content: space-between;
+    
+}
+
+.datos2 {
+    padding: 0px 30px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333;
+    font-size: 1.3rem;
+    line-height: 1.3em;
+    justify-content: space-between;
+    
+}
+
+.datos3 {
+    padding: 0px 30px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #333;
+    font-size: 1.3rem;
+    line-height: 1.3em;
+    justify-content: space-between;
+    
+}
+
+.datos1 input[type='text'], .datos1 textarea{
+    padding: 7px 6px;
+    width: 294px; /* una longitud definida */
+    border: 1px solid #CED5D7;
+    resize: none; /* esta propiedad es para que el textarea no sea redimensionable */
+    box-shadow:0 0 0 3px #EEF5F7;
+    margin: 5px 0;
+}
+.datos1 label{
+        display: block; /* esto es para que el label se sobreponga a la caja de texto */
+        font-weight: bold;    
+        }
