--- a/style.css
+++ b/style.css
@@ -69,9 +69,10 @@ body {
 }
 
 h5{
-
+    font-size: 1.0rem;
+    line-height: 1.0em;
     margin: -10px;
-    padding: 5px 10px;
+    padding: 15px 10px;
 
 }
 
@@ -86,55 +87,63 @@ h2 {
     margin: 0;
   }
 
-.formulario{
+.flex-container{
     border: 1px solid #CED5D7;
     border-radius: 6px;
     padding: 45px 45px 20px;
-    margin-top: 50px;
     background-color: white;
-    box-shadow: 0px 5px 10px #B5C1C5, 0 0 0 10px #EEF5F7 inset;
-    display: block;
-}
-
-.datos1 {
-    padding: 0px px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #333;
-    font-size: 1.3rem;
-    line-height: 1.3em;
-    justify-content: space-between;
+    box-shadow: 0px 5px 10px #c5bab5, 0 0 0 10px #f3eaea inset;
+    display: flex;
+    justify-content:space-between ;
+    margin-left: 120px;
+    margin-right: 70px;
+    flex-wrap: wrap;
     
 }
 
-.datos2 {
-    padding: 0px 30px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #333;
-    font-size: 1.3rem;
-    line-height: 1.3em;
-    justify-content: space-between;
+.flex-container label{
+
+    font-size: 1em;
+}
+
+.flex-container div{
+
+    width: 200px;
+}
+
+.nueva_venta {
+
+    display: flex;
+    justify-content:start;
+    padding: 45px 45px 20px;
+    text-align: center;
+}
+
+.nueva_venta button{
+
+    margin-left: 30px;
+    text-align: center;
+}
+/* .wd30 {
+    margin: 10px;
+    width: 30%;
+} */
+
+/* .flex-container{
+    display: flex;
+    background-color: antiquewhite;
+    padding: 10px;
+    border: 2px solid black;
     
 }
 
-.datos3 {
-    padding: 0px 30px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #333;
-    font-size: 1.3rem;
-    line-height: 1.3em;
-    justify-content: space-between;
-    
-}
+.flex-container div{
 
-.datos1 input[type='text'], .datos1 textarea{
-    padding: 7px 6px;
-    width: 294px; /* una longitud definida */
-    border: 1px solid #CED5D7;
-    resize: none; /* esta propiedad es para que el textarea no sea redimensionable */
-    box-shadow:0 0 0 3px #EEF5F7;
-    margin: 5px 0;
-}
-.datos1 label{
-        display: block; /* esto es para que el label se sobreponga a la caja de texto */
-        font-weight: bold;    
-        }
+    width: 100px;
+    margin: 10px;
+    background-color: chocolate;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+    border: 2px solid black; */
+/* } */
